refactor: Simplify chapter creation and contributor validation in novel use cases
- Updated CreateChapterUseCase and CreateNovelRoomUseCase to directly create chapters using the contributor list, removing the need for empty chapter creation.
- Introduced contributor size validation in CreateChapterUseCase to ensure contributors are present before proceeding.
- Enhanced ContributorGroup to provide a method for retrieving the size of contributors, improving code clarity and validation logic.
- Refactored Chapter creation logic in Novel class to streamline chapter management.